--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.53.1",
-    "react-test-renderer": "^15.6.1"
+    "flow-bin": "^0.53.1"
   }
 }
