--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "coffee-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://trakbit.github.io/coffee-app",
   "dependencies": {
     "axios": "^0.16.2",
     "grommet": "^1.2.0",
@@ -17,13 +18,16 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.53.1"
+    "flow-bin": "^0.53.1",
+    "gh-pages": "^1.0.0"
   }
 }
