--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-    plugins: ["transform-flow-strip-types", "transform-class-properties"]
+    preset: ["flow"],
+    plugins: ["transform-class-properties"]
 }
